[package]
name = "zed_koka"
version = "0.2.0"
edition = "2021"
publish = false
license = "Apache-2.0"
authors = ["Bruno Clemento <bruno.clemento42@gmail.com>"]
description = "Zed extension adding Koka language support"

[lib]
path = "src/koka.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6.0"
